--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -24,9 +24,9 @@
             </ul>
         </div>
     </header>
-    <figure></figure> <!--Hero Picture-->
+    <nav></nav> <!--Hero Picture-->
     <section>
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
