--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -4,27 +4,30 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services, Inc.</title>
 </head>
 
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <ul>
-                <li>
+            <nav>
+               <ul>
+                
+                    <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
+                    </li>
+                    <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
+                    </li>
+                    <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+                    </li>
+             </ul>
+            </nav>
         </div>
     </header>
-    <nav></nav> <!--Hero Picture-->
+    <figure></figure> <!--Hero Picture-->
     <section>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
